src/tests/errors/tuples/002.ura
// errors/tuples/002 — tuple unpack type mismatch
use "@/header"

fn pair() (int, int):
    return 1, 2

main():
    a int, b chars = pair()
    output(a, "\n")
